Add new keyword_only feature

--- a/config.yaml
+++ b/config.yaml
@@ -74,6 +74,8 @@ rss:
     - FoxBot
   feeds:
   - group: BBC
+    # Only send notifications for keyword matches. Non-matching items go to console only.
+    # keyword_only: true
     html:
         tags:
           - main
